(patch for) Ability to set "Pivot Center for rotation/scale" missing in weight paint mode #34443

Closed
opened 2013-02-26 13:26:01 +01:00 by Gaia Clary · 6 comments
Member

%%%--- Operating System, Graphics card ---

gtx-470, windows-7

- Blender version with error, and version that worked ---

2.66

- Short description of error ---

The "Pivot Center for rotation/scale" is only available in object mode
and in edit mode. But it is also useful in Weight Paint mode when
weighting a rigged character.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- gtx-470, windows-7 - Blender version with error, and version that worked --- 2.66 - Short description of error --- The "Pivot Center for rotation/scale" is only available in object mode and in edit mode. But it is also useful in Weight Paint mode when weighting a rigged character. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%It should at least work if you have "face select" in wpaint on.
But, this is just a todo item.

Added to our wiki list:
http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Painting%%%

%%%It should at least work if you have "face select" in wpaint on. But, this is just a todo item. Added to our wiki list: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Painting%%%
Author
Member

%%%I added a patch for this problem. From the comments in the source code it appears to me like the selector was meant to be available, so this looks to me more like a bug than a missing feature. i can apply the patch if you like.%%%

%%%I added a patch for this problem. From the comments in the source code it appears to me like the selector was meant to be available, so this looks to me more like a bug than a missing feature. i can apply the patch if you like.%%%
Member

%%%Patch seems ok but i didnt test it. just apply, if things go wrong we know where to find you :)
%%%

%%%Patch seems ok but i didnt test it. just apply, if things go wrong we know where to find you :) %%%
Author
Member

%%%fixed in revision 54888%%%

%%%fixed in revision 54888%%%
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34443
No description provided.