Add: [#34443] Ability to set 'Pivot Center for rotation/scale' missing in weight paint mode